[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gui/Objects/LockInButton/AbilitySelectButton.gd" type="Script" id=1]
[ext_resource path="res://Gui/Objects/Icons/base_x76.png" type="Texture" id=2]
[ext_resource path="res://Gui/Objects/Icons/Buttons/Ability_Locked_In_x76.png" type="Texture" id=3]
[ext_resource path="res://Gui/Objects/Icons/Buttons/Disabled.png" type="Texture" id=4]
[ext_resource path="res://Gui/Objects/Icons/Buttons/Ability_Hovered_x76.png" type="Texture" id=5]

[node name="TextureButton" type="TextureButton"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 76, 76 )
toggle_mode = true
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hovered" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockedIn" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disabled" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
